fixtures/happy/optional_call_types.expected
exit_code: 1
--- stdout ---
--- stderr ---
Error: error: unsupported expression kind `optional-chain`
 --> happy/optional_call_types.js:3:1
3 | console.log?.("native_optional");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

